examples/errors/parsing/simple_refined-bracket-effect.rcn
main : (x : Int) pure =
  (42) : (x : Int)
